无用户登录状态，修改文章细节关于用户的信息

--- a/django_blog/mysite/templates/article/list/article_detail.html
+++ b/django_blog/mysite/templates/article/list/article_detail.html
@@ -5,7 +5,7 @@
 <div>
     <header>
         <h1>{{ article.title }}</h1>
-        <p>{{ user.username}}</p>
+        <p>{{ article.author.username }}</p>   {# 文章实际的作者 #}
     </header>
     <link rel="stylesheet" href="{% static 'editor/css/editormd.preview.css'%}" />
     <div id="editormd-view">
