--- a/django_blog/mysite/templates/article/column/article_list.html
+++ b/django_blog/mysite/templates/article/column/article_list.html
@@ -14,7 +14,7 @@
         <tr if={{ article.id }}>
             <td>{{ forloop.counter }}</td>
             <td><a href="{{ article.get_absolute_url }}">{{ article.title }}</td>
-            <td>{{ article.column }}</td>
+            <td>{{ article.column | safe}}</td>
             <td><a name="edit" href="{% url 'article:redit_article' article.id %}">
                     <span class="glyphicon glyphicon-pencil"></span></a>
                 <a name="delete" href="javascript:" onclick="del_article(this, {{ article.id }})">
