--- a/django_blog/mysite/templates/article/list/article_detail.html
+++ b/django_blog/mysite/templates/article/list/article_detail.html
@@ -1,11 +1,17 @@
 {% extends "article/base.html" %}
 {% load staticfiles %}
-{% block title %}article list{% endblock %}
+{% block title %}{{ article.title }}{% endblock %}
 {% block content %}
-<div>
+{% with total_likes=article.user_like.count users_like=article.user_like.all %}  <!-- with 模板语句，定义变量。在with之间可以使用该变量!-->
+
+<div class="container">
     <header>
         <h1>{{ article.title }}</h1>
-        <p>{{ article.author.username }}</p>   {# 文章实际的作者 #}
+        <p>
+        <a href="{% url 'article:author_articles' article.author.username %}">{{article.author.username}}</a> {# 文章实际的作者 #}
+        <span style="margin-left:20px" class="glyphicon glyphicon-thumbs-up">{{ total_likes }}like{{ total_likes | pluralize }}</span>
+                                                                                                  <!--过滤器 pluralize ，没有人huo超过一个人是负数；一个人是单数!-->
+        </p>
     </header>
     <link rel="stylesheet" href="{% static 'editor/css/editormd.preview.css'%}" />
     <div id="editormd-view">
@@ -14,6 +20,20 @@
         </textarea>
     </div>
 </div>
+    <a class="text-center">
+        <a onclick="like_article({{ article.id }},'like')" href="#"><span class="glyphicon glyphicon-thumbs-up">like</span></a>
+        <a onclick="like_article({{ article.id }},'unlike')" href="#"><span style="margin-left:15px" class="glyphicon glyphicon-thumbs-down">unlike</span></a>
+    </p>
+    </a>
+    <div>
+    <p class="text-center"><strong>点赞本文的作者</strong></p>
+    {% for user in article.user_like.all %}
+    <p class="text-center">{{ user.username }}</p>
+    {% empty %}  <!--假如 article.users_like.all 为空，则执行以下内容!-->
+    <p class="text-center">还没有人对此文章表态</p>
+    {% endfor %}
+    </div>
+
 <script src='{% static "js/jquery-3.3.1.min.js" %}'></script>
 <script src='{% static "editor/lib/marked.min.js"%}'></script>
 <script src='{% static "editor/lib/prettify.min.js"%}'></script>
@@ -23,6 +43,9 @@
 <script src='{% static "editor/lib/flowchart.min.js"%}'></script>
 <script src='{% static "editor/lib/jquery.flowchart.min.js"%}'></script>
 <script src='{% static "editor/editormd.js" %}'></script>
+
+<script type="text/javascript" src="{% static 'js/layer.js' %}"></script>
+
 <script type="text/javascript">
     $(function () {
         editormd.markdownToHTML("editormd-view",{
@@ -34,5 +57,25 @@
             sequenceDiagram:true,
         });
     });
+    function like_article(id, action) {
+        $.ajax({
+            url: "{% url 'article:like_article' %}",
+            type: "POST",
+            data: {"id": id, "action":action},
+            success: function (e) {
+                if(e=="1"){
+                    layer.msg("感谢点赞");
+                    window.location.reload();
+                }else{
+                    layer.msg("我会继续努力");
+                    window.location.reload();
+                }
+
+            }
+
+        })
+
+    }
 </script>
+{% endwith %}
 {% endblock %}
