--- a/django_blog/mysite/templates/article/list/article_detail.html
+++ b/django_blog/mysite/templates/article/list/article_detail.html
@@ -5,12 +5,14 @@
 {% with total_likes=article.user_like.count users_like=article.user_like.all %}  <!-- with 模板语句，定义变量。在with之间可以使用该变量!-->
 
 <div class="container">
+<div class="col-md-9">
     <header>
         <h1>{{ article.title }}</h1>
         <p>
         <a href="{% url 'article:author_articles' article.author.username %}">{{article.author.username}}</a> {# 文章实际的作者 #}
         <span style="margin-left:20px" class="glyphicon glyphicon-thumbs-up">{{ total_likes }}like{{ total_likes | pluralize }}</span>
                                                                                                   <!--过滤器 pluralize ，没有人huo超过一个人是负数；一个人是单数!-->
+            <span style="margin-left: 20px">{{ total_views }}view{{ total_views | pluralize }}</span>
         </p>
     </header>
     <link rel="stylesheet" href="{% static 'editor/css/editormd.preview.css'%}" />
@@ -19,7 +21,7 @@
 {{ article.body }}
         </textarea>
     </div>
-</div>
+
     <a class="text-center">
         <a onclick="like_article({{ article.id }},'like')" href="#"><span class="glyphicon glyphicon-thumbs-up">like</span></a>
         <a onclick="like_article({{ article.id }},'unlike')" href="#"><span style="margin-left:15px" class="glyphicon glyphicon-thumbs-down">unlike</span></a>
@@ -33,7 +35,18 @@
     <p class="text-center">还没有人对此文章表态</p>
     {% endfor %}
     </div>
-
+</div>
+<div class="col-md-3">
+        <p class="text-center"><h3>最受欢迎文章</h3></p>
+    <ol>
+        {% for article_rank in most_viewed %}
+        <li>
+            <a href="{{ article_rank.get_url_path }}">{{ article_rank.title }}</a>
+        </li>
+        {% endfor %}
+    </ol>
+</div>
+</div>
 <script src='{% static "js/jquery-3.3.1.min.js" %}'></script>
 <script src='{% static "editor/lib/marked.min.js"%}'></script>
 <script src='{% static "editor/lib/prettify.min.js"%}'></script>
