--- a/django_blog/mysite/templates/article/list/article_detail.html
+++ b/django_blog/mysite/templates/article/list/article_detail.html
@@ -1,5 +1,6 @@
 {% extends "article/base.html" %}
 {% load staticfiles %}
+{% load article_tags %}
 {% block title %}{{ article.title }}{% endblock %}
 {% block content %}
 {% with total_likes=article.user_like.count users_like=article.user_like.all %}  <!-- with 模板语句，定义变量。在with之间可以使用该变量!-->
@@ -74,6 +75,18 @@
         </li>
         {% endfor %}
     </ol>
+    <p class="text-center"><h3>最新文章</h3><p>
+    {% latest_articles 4 %}
+    <hr>
+    <p class="text-center"><h3>最多评论文章</h3></p>
+    {% most_commented_articles as most_comments %}
+    <ul>
+        {% for comment_article in most_comments %}
+        <li>
+            <a href="{{ comment_article.get_url_path }}">{{ comment_article.title | safe}}</a>
+        </li>
+        {% endfor %}
+    </ul>
 </div>
 </div>
 <script src='{% static "js/jquery-3.3.1.min.js" %}'></script>
