添加，显示文章标签；推荐相似文章

--- a/django_blog/mysite/templates/article/list/article_detail.html
+++ b/django_blog/mysite/templates/article/list/article_detail.html
@@ -15,6 +15,7 @@
                                                                                                   <!--过滤器 pluralize ，没有人huo超过一个人是负数；一个人是单数!-->
             <span style="margin-left: 20px">{{ total_views }}view{{ total_views | pluralize }}</span>
         </p>
+        <p><span style="margin-right: 10px"><strong>Tags:</strong></span>{{ article.article_tag.all | join:", " }}</p>  <!--让结果以逗号连接!-->
     </header>
     <link rel="stylesheet" href="{% static 'editor/css/editormd.preview.css'%}" />
     <div id="editormd-view">
@@ -88,6 +89,14 @@
         </li>
         {% endfor %}
     </ul>
+    <hr>
+    <p class="text-center"><h3>推荐相似文章</h3></p>
+    {% for similar in similar_articles %}
+        <p><a href="{{ similar.get_url_path }}">{{ similar.title}}</a>
+    {% empty %}
+        <p>Sorry,没有相似文章</p>
+    {% endfor %}
+
 </div>
 </div>
 <script src='{% static "js/jquery-3.3.1.min.js" %}'></script>
