--- a/django_blog/mysite/templates/header.html
+++ b/django_blog/mysite/templates/header.html
@@ -10,6 +10,8 @@
                 <li><a href="{% url 'home' %}">HOME</a></li>   {# 通用视图的路径 #}
                 <li><a href="{% url 'blog:blog_title' %}">BLOG</a></li>
                 <li><a href="{% url 'article:article_titles' %}">文章</a></li>
+                <li><a href="{% url 'course:course_list' %}">课程</a></li>
+                <li><a href="{% url 'course:about' %}">关于本站</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right" style="margin-right:10px">
                 {% if user.is_authenticated %}
